# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
#
# build OpcUaGenerator
# 
# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
include_directories(
    ${CMAKE_SOURCE_DIR}
    ${Boost_INCLUDE_DIRS}
    ${OPENSSL_INCLUDE_DIR}
)


# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
#
# install
# 
# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------
install(FILES ${PROJECT_SOURCE_DIR}/OpcUaCtrl/Config/openssl.cnf DESTINATION /etc/OpcUaStack/ssl)

